# tradernew

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check_env.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.py  setup.sh  test.db
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  README.md  celery_worker.py  check_env.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_initial_tables.py  e8363d23dc00_add_mlmodelmetadata_and_backtestresult_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: backtest.py  data.py  market.py  system.py  train.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/api/v1/endpoints/backtest/: __init__.py  backtest.py
backend/app/api/v1/endpoints/data/: __init__.py  market_data.py  tasks.py
backend/app/api/v1/endpoints/models/: __init__.py  model.py  train.py
backend/app/api/v1/endpoints/tasks/: __init__.py  task.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  base_class_registry.py  repository.py  session.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/middlewares/: error_handler.py
backend/app/models/: __init__.py  backtest.py  backtest_result.py  base.py  economic_indicator.py  market_data.py  ml_model_metadata.py  ml_models.py  technical_indicator.py  technical_indicators.py
backend/app/repositories/: __init__.py  backtest.py  base.py  market_data.py  ml_models.py  technical_indicators.py
backend/app/schemas/: __init__.py  backtest.py  base.py  economic_indicator.py  market_data.py  ml_model.py  technical_indicator.py
backend/app/schemas/backtest/: __init__.py  backtest_result.py
backend/app/tasks/: __init__.py  data_tasks.py  model_tasks.py  scheduled.py  worker.py
backend/app/worker/: celery_worker.py  tasks.py
docker/postgres/: init.sql
docs/: setup.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
schemas/: market_data.py
(+9 files in other folders)
